--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
 				<li>English Intermediate Level</li>
 			</ul>
 		</section>
+		<section id="military">
+			<h2>Military service [obligatory in Greece]</h2>
+			<ul>
+				<li>9 months military service in the Greek army 
+				<br>March-December 2013
+				<br>3rd Mechanized Infantry Brigade "Rimini" in Kavyli - Evros
+				<br>3rd Signal Company
+				<br>Signal &amp; Electronic Warfare 
+				<br>Speciality: Operator Wireless-Radio Phone and Driver MS-240GD / MS-290GD
+				<br>Motto: Virtue is a weapon no one can ablate (Αναφαίρετον όπλον αρετή)</li>
+			</ul>
+		</section>
 		<section id="hobbies">
 			<h2>Hobbies</h2>
 			<ul>
@@ -127,7 +139,9 @@
 				<a href="http://youtube.com/nigoutsi" target="_blank">	<img src="images/youtube.ico" alt="Youtube"> </a>
 				<a href="http://plus.google.com/+NikosGoutsidis" target="_blank"> <img src="images/googleplus.ico" alt="Google+"> </a>
 				<a href="http://github.com/nigoutsi" target="_blank"> <img src="images/github.png" alt="Github"> </a>
+				<a href="http://github.com/AM0335" target="_blank"> <img src="images/github.png" alt="Github"> </a>
 				<a href="https://nigoutsi.wordpress.com" target="_blank"> <img src="images/wordpress.ico" alt="WordPress"> </a>
+				<a href="https://am0335.wordpress.com" target="_blank"> <img src="images/wordpress.ico" alt="WordPress"> </a>
 				<a href="http://83.212.123.61/" target="_blank"> <img src="images/okeanos.png" alt="Okeanos"> </a>
 			</p>
 		</div>
